2016-04-08  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany2.h: New file.

2016-04-07  Ola Jeppsson  <ola@adapteva.com>

	* e-trace/Makemodule.am (e-trace-server): Add ETRACE_LIBS to
	link.
	(e-trace-dump): Likewise.

2016-04-04  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf: Reserve addresses below 0x100
	for internal use.
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.

2016-03-21  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data.h (e_sys_reg_id_t): Remove enum.
	(e_syscfg_tx_t): Remove struct.
	(e_syscfg_rx_t): Remove struct.
	(e_syscfg_clk_t) Remove struct.
	(e_syscfg_coreid_t): Remove struct.
	(e_syscfg_version_t): Remove struct.
	(e_syscfg_gpio_t): Remove struct.
	* e-utils/src/e-hw-rev.c (e_syscfg_version_t): Add struct
	(HACK).

2016-03-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/Makemodule.am: Capitalize ENABLE_ESIM.
	* configure.ac: Likewise.

2016-03-02  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.am: Always include bsps build rules.

2016-03-01  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Add --enable-pal-target argument. Add
	ENABLE_PAL_TARGET Automake conditional
	* e-hal/Makemodule.am [ENABLE_PAL_TARGET]: Set PAL CFLAGS and
	LDFLAGS.

2016-03-01  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Add --disable-ehal and --disable-elib
	arguments.
	* Makefile.am: Conditional build of e-lib based on flags given
	to configure. Conditional build of e-hal (and libraries that
	depend on e-hal).

2016-03-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_is_addr_in_emem): Use right type
	for memory segment.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/src/e-read.c (main): Remove call to
	e_reset_system().
	* e-utils/src/e-write.c (main): Likewise.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/Makemodule.am: Add e-dump-regs target.